Modifed Docker file added mysql and awscli client

--- a/centos7/Dockerfile
+++ b/centos7/Dockerfile
@@ -2,15 +2,15 @@ FROM centos:7
 
 RUN yum -y install openssh-server
 
-RUN useradd remote_user && \
-    echo "remote_user:1234" | chpasswd && \
-    mkdir /home/remote_user/.ssh && \
+RUN useradd shahid && \
+    echo "shahid:1234" | chpasswd && \
+    mkdir /home/shahid/.ssh && \
     chmod 700 /home/remote_user/.ssh
 	
-COPY remote-key.pub /home/remote_user/.ssh/authorized_keys
+COPY remote-key.pub /home/shahid/.ssh/authorized_keys
 
-RUN chown remote_user:remote_user   -R /home/remote_user && \
-    chmod 600 /home/remote_user/.ssh/authorized_keys
+RUN chown shahid:shahid   -R /home/shahid && \
+    chmod 600 /home/shahid/.ssh/authorized_keys
 
 RUN ssh-keygen -A
 
